tooling/nargo_cli/tests/snapshots/compile_failure/overlapping_generic_impls/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Impl for type `u32` overlaps with existing impl
  ┌─ src/main.nr:3:9
  │
3 │ impl<T> Trait for T { fn t(self){} }
  │         ----- Previous impl defined here
4 │ impl Trait for u32 { fn t(self){} }
  │                --- Overlapping impl
  │

Aborting due to 1 previous error
